  encoding. This is useful in the following cases:

  * the remote HTTP server doesn't supply an HTTP Content-Encoding header, 
    and the local (Java) default encoding doesn't match the document's 
    encoding
  * the remote HTTP server supplies the wrong encoding

  See the Users Guide or the sample configuration file for more information.


Version 1.4:

- All output handlers have been moved under "org.clapper.output". It
  is (regrettably) necessary to update curn configuration files that
  reference the old fully-qualified class names.

  Handler class               Old Package             New Package
  ---------------------------------------------------------------------------
  HTMLOutputHandler           org.clapper.htmloutput  org.clapper.output.html
  SimpleSummaryOutputHandler  org.clapper.curn        org.clapper.curn.output
  TextOutputHandler           org.clapper.curn        org.clapper.curn.output
  ---------------------------------------------------------------------------

- Curn now supports multiple output handlers of the same class in the same
  configuration file.

- Curn now comes bundled with a new ScriptOutputHandler 
  (org.clapper.output.script.ScriptOutputHandler). This handler requires the
  Apache Jakarta Bean Scripting Framework (BSF), available at
  "http://jakarta.apache.org/bsf/". It's basically a shim that uses BSF
  to permit output handlers to be written in any BSF-supported scripting
  language (e.g., Jython, JRuby, Rhino Javascript, etc.)

- The "Quiet" configuration option is no longer supported. If it appears
  in a configuration file, it will be silently ignored. Similarly, the
  --quiet (-q) and --no-quiet (-Q) command line options no longer exist.

- (API) When parsed from the config, output handlers are now wrapped in
  ConfiguredOutputHandler objects, which contain all the config data for
  the handler, and provide a means to instantiate a handler easily.
