@@ -277,16 +277,20 @@ Disabled: false
 #
 # Additional parameters:
 #
-# SaveAs:   Save a copy of the text to a specified file.
-# SaveOnly: If "true", save the text to the "SaveAs" file, but don't provide
-#           any output to curn. If "false" or absent, provide output to curn.
-# Title:    Title to use in the generated HTML. Defaults to "RSS Feeds"
+# SaveAs:       Save a copy of the text to a specified file.
+# SaveOnly:     If "true", save the text to the "SaveAs" file, but don't
+#               provide any output to curn. If "false" or absent, provide
+#               output to  curn.
+# Title:        Title to use in the generated HTML. Defaults to "RSS Feeds"
+# HTMLEncoding: Specify the encoding to use when writing the HTML document.
+#               Defaults to "utf-8" if not specified.
 
 Class: org.clapper.curn.output.html.HTMLOutputHandler
 Disabled: false
 #SaveAs: ${system:user.home}/curn/rss.html
 #SaveOnly: false
 #Title: RSS Feeds
+HTMLEncoding: utf-8
 
 [OutputHandlerScript]
 
@@ -464,6 +468,9 @@ IgnoreDuplicateTitles: false
 #                           default encoding doesn't match the document's 
 #                           encoding
 #                         - the remote HTTP server supplies the wrong encoding
+#
+#                         This value should be a character set encoding that's
+#                         recognized by the Java runtime environment.
 #
 # OPTIONAL. Default: the server- or document-supplied character set encoding,
 #                    if present; otherwise, the encoding of the Java VM that's
