@@ -23,7 +23,6 @@
   your version is a modification of the original, and you must provide either
   a pointer to or a copy of the original.
 -->
-
 <title id="Title">RSS Feeds</title>
 
 <!-- $Id$ -->
